Bug 824272 Get the executable path directly from the directory service instead of guesswork r=Neil.